<resources>
  <string name="app_name">AnimationSample</string>
  <string name="activity_transition">Activity Transition</string>
  <string name="run">Run</string>
  <string name="animation_cloning">Animation Cloning</string>
  <string name="animation_loading">Animation Loading</string>
  <string name="animation_seeking">Animation Seeking</string>
  <string name="play">Play</string>
  <string name="cancel">Cancel</string>
  <string name="end">End</string>
  <string name="end_immediately">End Immediately</string>
  <string name="sequencer_events">Sequencer Events:</string>
  <string name="start">Start</string>
  <string name="repeat">Repeat</string>
  <string name="animator_events">Animator Events:</string>
  <string name="animatorEvents">Animator Events</string>
  <string name="bouncing_balls">Bouncing Balls</string>
  <string name="custom_evaluator">Custom Evaluator</string>
  <string name="add_button">Add Button</string>
  <string name="custom_animations">Custom Animations</string>
  <string name="in">In</string>
  <string name="out">Out</string>
  <string name="changing_in">Changing-In</string>
  <string name="changing_out">Changing-Out</string>
  <string name="layout_animations">Layout Animations</string>
  <string name="layout_animations_by_default">Layout Animations By Default</string>
  <string name="show_buttons">Show Buttons</string>
  <string name="hide_gone">Hide (GONE)</string>
  <string name="layout_animations_hide_show">Layout Animations Hide Show</string>
  <string name="flip">Flip</string>
  <string name="list_flipper">List Flipper</string>
  <string name="multi_property_animation">MultiProperty Animation</string>
  <string name="named_components">Named Components</string>
  <string name="property_components">Property Components</string>
  <string name="multi_int">Multi-int</string>
  <string name="multi_float">Multi-float</string>
  <string name="named_property">Named Property</string>
  <string name="property">Property</string>
  <string name="path_animations">Path Animations</string>
  <string name="reverse">Reverse</string>
  <string name="reversing_animations">Reversing Animations</string>
  <string name="transition_3d">Transition 3D</string>
  <string name="scene_1">Scene 1</string>
  <string name="scene_2">Scene 2</string>
  <string name="scene_3">Scene 3</string>
  <string name="scene_4">Scene 4</string>
  <string name="transitions">Transitions</string>
  <string name="ducky">Ducky</string>
  <string name="woot">Woot!</string>
  <string name="ball">Ball</string>
  <string name="block">Block</string>
  <string name="jelly_bean">Jelly Bean</string>
  <string name="mug">Mug</string>
  <string name="pencil">Pencil</string>
  <string name="scissors">Scissors</string>
</resources>
