<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/startButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/play"/>

    <Button
      android:id="@+id/cancelButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel"/>

    <Button
      android:id="@+id/endButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/end"/>

    <CheckBox
      android:id="@+id/endCB"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/end_immediately"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sequencer_events"/>

    <TextView
      android:id="@+id/startText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/start"/>

    <TextView
      android:id="@+id/repeatText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/repeat"/>

    <TextView
      android:id="@+id/cancelText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel"/>

    <TextView
      android:id="@+id/endText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/end"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/animator_events"/>

    <TextView
      android:id="@+id/startTextAnimator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/start"/>

    <TextView
      android:id="@+id/repeatTextAnimator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/repeat"/>

    <TextView
      android:id="@+id/cancelTextAnimator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel"/>

    <TextView
      android:id="@+id/endTextAnimator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/end"/>

  </LinearLayout>

</LinearLayout>
